# space-game

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
src/: bullet.rs  camera.rs  game.rs  main.rs  particle.rs  screen.rs  ship.rs
