[package]
name = "space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ECS based game engine: https://bevyengine.org/
bevy = "0.9.0"
bevy_prototype_lyon = "0.7.1"


[dev-dependencies]
float-cmp = "0.9.0"
pretty_assertions = "1.3.0"
rstest = "0.15.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
