[package]
name = "space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ECS based game engine: https://bevyengine.org/
bevy = "0.14.2"
bevy-inspector-egui = "0.27.0"
bevy_prototype_lyon = "0.12.0"
rand = "0.8.5"


[dev-dependencies]
float-cmp = "0.10.0"
pretty_assertions = "1.4.1"
rstest = "0.23.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
